Cleaning up blog spacing issues

--- a/css/customize.css
+++ b/css/customize.css
@@ -720,20 +720,20 @@ select.form-control {
 
 .blog-post-details, .blog-featured-details, .archive-tile {
   background: #FFFFFF;
-  border: 1px solid #D5D5D5;
-  border-right: none;
+  border: 1px solid #E5E5E5;
   width: 480px;
   text-align: left;
   padding: 30px;
   min-height: 520px;
   position: absolute;
   left: 30px;
-  
+
   font-family: Gotham-Light;
   font-size: 13px;
   color: #303030;
   letter-spacing: 0.23px;
   line-height: 17px;
+  margin-bottom: 32px;
 }
 
 .blog-post-details ul {
@@ -775,6 +775,10 @@ select.form-control {
   width: 100%;
 }
 
+.blocks-gallery-grid {
+  padding-inline-start: 0px;
+}
+
 /* ----------
 I inserted .wp-block-gallery in place of .blog-post-image-contain
 and .blocks-gallery-item in place of .blog-post-image on the old site.
@@ -794,7 +798,7 @@ figcaption {
 
 .blog-post-image-contain, .wp-block-gallery {
   position: relative;
-  left: 510px;
+  left: 520px;
   float: left;
 }
 
@@ -911,14 +915,13 @@ p.blog-text {
   .blog-post-details, .blog-featured-details, .archive-tile {
     width: 100%;
     display: block;
-    margin: 0;
+    margin: 0 0 32px 0;
     min-height: 0;
     float: none;
     border-right: 1px solid #D5D5D5;
     position: static;
     left: 0;
   }
-
 
   .blog-post-image-contain, .wp-block-gallery {
     position: static;
@@ -1105,4 +1108,8 @@ p.blog-text {
   text-align: center; 
   color: #333; 
   font-size: 16px;
+}
+
+.grecaptcha-badge {
+  visibility: hidden !important;
 }
